--- a/index.html
+++ b/index.html
@@ -41,22 +41,35 @@
 
     #message {
       position: absolute;
-      top: 40%;
+      top: 30%;
       width: 100%;
       text-align: center;
-      font-size: 32px;
+      font-size: 28px;
       color: crimson;
       display: none;
-      background-color: rgba(255,255,255,0.8);
-      padding: 20px;
+      background-color: rgba(255,255,255,0.9);
+      padding: 30px 20px;
       border-radius: 20px;
+    }
+
+    #message img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      margin-bottom: 20px;
+      border: 4px solid crimson;
     }
   </style>
 </head>
 <body>
   <div id="game">
     <div id="scoreBoard">Score: 0</div>
-    <div id="message">You clicked all my hearts 💖<br>I love you!</div>
+
+    <!-- Message with image -->
+    <div id="message">
+      <img src="https://cdn-icons-png.flaticon.com/512/4140/4140037.png" alt="Love Picture" />
+      You clicked all my hearts 💖<br>I love you!
+    </div>
   </div>
 
   <script>
