--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <!-- Message with image -->
     <div id="message">
-      <img src="https://cdn-icons-png.flaticon.com/512/4140/4140037.png" alt="Love Picture" />
+      <img src="./larki3.png" alt="Love Picture" />
       You clicked all my hearts 💖<br>I love you!
     </div>
   </div>
