--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
     <!-- Message with image -->
     <div id="message">
       <img src="https://cdn-icons-png.flaticon.com/512/4140/4140037.png" alt="Love Picture" />
-      You clicked all my hearts 💖<br>I love you!
+      Hey Mahnoor Bilal 💕,
+I know I messed up 😔, and I’m really sorry 🙏.
+You mean everything to me 💖 — I just want to fix things and see you smile again 😊.
+I love you, Mahnoor Bilal ❤️.
+– Bilal 💙 💖<br>I love you!
     </div>
   </div>
 
