--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 
     <!-- Message with image -->
     <div id="message">
-      <img src="https://cdn-icons-png.flaticon.com/512/4140/4140037.png" alt="Love Picture" />
+      <img src="/dil.jpg" alt="Love Picture" />
       Hey Mahnoor Bilal 💕,
-I know I messed up 😔, and I’m really sorry 🙏.
-You mean everything to me 💖 — I just want to fix things and see you smile again 😊.
+I know I messed up 😔,<br> and I’m really sorry 🙏.<br>
+You mean everything to me 💖 <br>— I just want to fix things and see you smile again 😊.<br>
 I love you, Mahnoor Bilal ❤️.
 – Bilal 💙 💖<br>I love you!
     </div>
