--- a/index.html
+++ b/index.html
@@ -78,12 +78,13 @@
 
     <!-- Message with image -->
     <div id="message">
-      <img src="/dil.jpg" alt="Love Picture" />
+      <img src="./dil.jpg" alt="Love Picture" /><br>
       Hey Mahnoor Bilal 💕,
 I know I messed up 😔,<br> and I’m really sorry 🙏.<br>
 You mean everything to me 💖 <br>— I just want to fix things and see you smile again 😊.<br>
 I love you, Mahnoor Bilal ❤️.
 – Bilal 💙 💖<br>I love you!
+      
     </div>
   </div>
 
